[package]
name = "egui_nodes"
version = "0.1.1"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.11"
derivative = "2.1.1"

[dev-dependencies]
eframe = "0.11"