[package]
name = "egui_nodes"
version = "0.1.5"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.17.0"
derivative = "2.2.0"

[dev-dependencies]
eframe = "0.17.0"
